Bug 1107782 - Only accept certain mouse, gamepad events as user-active. r=smaug

Based on a patch by gfritsche, this filters out mouse events not indicative of
user activity (like hit tests), and brings in gamepad events that might be
indicative of user activity.